feat: add benchmark gpu pass through option for each model registry
